--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dev_dependencies:
   sqflite: ^2.2.8+4
   path: ^1.8.3
 
+  provider: ^6.1.0  # 使用最新版本
+
+  rxdart: ^0.27.7
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
