--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ dependencies:
   # 下拉刷新
   pull_to_refresh: ^2.0.0
 
+  # 获取储存路径
+  path_provider: ^2.0.15
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
