--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,6 +14,11 @@ dependencies:
   module_library:
     path: ../
 
+  module_base:
+    path: /Users/moyearzhou/StudioProjects/module_base
+  #    git:
+  #      url: https://github.com/moyearzhou/ModuleBase.git
+
 
 dev_dependencies:
   flutter_test:
