--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,3 +1,7 @@
+//android {
+//    namespace 'com.idlefish.flutterboost'
+//}
+
 buildscript {
     ext.kotlin_version = '1.8.0'
     repositories {
@@ -6,7 +10,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath 'com.android.tools.build:gradle:8.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
