--story=1000098 --user=moyearzhou 【客户端】webdav附件下载 https://www.tapd.cn/63782301/s/1000166

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,15 @@ dependencies:
   # 下拉刷新
   pull_to_refresh: ^2.0.0
 
+  # zip支持
+  archive: ^4.0.7
+
+  #  webdav_client: ^1.2.2
+  webdav_client:
+    path: /Users/moyearzhou/StudioProjects/webdav_client2
+#    git:
+#      url: git@github.com:moyearzhou/webdav_client2.git
+
   module_base:
     path: /Users/moyearzhou/StudioProjects/module_base
   #    git:
