--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   #    git:
   #      url: https://github.com/moyearzhou/ModuleBase.git
 
+  open_filex: ^4.5.0
 
 dev_dependencies:
   flutter_test:
