--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,9 +55,10 @@ dependencies:
 ##      url: git@github.com:moyearzhou/webdav_client2.git
 
   module_base:
-    path: /Users/moyearzhou/StudioProjects/module_base
-  #    git:
-  #      url: https://github.com/moyearzhou/ModuleBase.git
+#    path: /Users/moyearzhou/StudioProjects/module_base
+    git:
+      url: https://github.com/moyearzhou/ModuleBase.git
+      ref: v-0.1.0
   
   # HTML渲染支持，用于显示笔记的富文本内容
   flutter_html: ^3.0.0-beta.2
