--story=1000164 --user=moyearzhou 【鸿蒙】zotpaper项目修改flutter版本，以及功能支持鸿蒙 https://www.tapd.cn/63782301/s/1000436 修改yaml分支

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,10 +15,10 @@ dependencies:
     path: ../
 
   module_base:
-    path: /Users/moyearzhou/StudioProjects/module_base
-  #    git:
-  #      url: https://github.com/moyearzhou/ModuleBase.git
-
+#    path: /Users/moyearzhou/StudioProjects/module_base
+    git:
+      url: https://github.com/moyearzhou/ModuleBase.git
+      ref: feat/ohos
 
 dev_dependencies:
   flutter_test:
