--story=1000277@tapd-63782301 --user=moyearzhou 【客户端】增加埋点信息 https://www.tapd.cn/63782301/s/1000604 增加itemKey上报

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,17 +14,20 @@ dependencies:
   module_library:
     path: ../
 
-  module_base:
-#    path: /Users/moyearzhou/StudioProjects/module_base
-    git:
-      url: https://github.com/moyearzhou/ModuleBase.git
-      ref: feat/ohos
+#  module_base:
+##    path: /Users/moyearzhou/StudioProjects/module_base
+#    git:
+#      url: https://github.com/moyearzhou/ModuleBase.git
+#      ref: feat/ohos
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.3.3
 
+#dependency_overrides:
+#  module_base:
+#    path: /Users/moyearzhou/StudioProjects/module_base
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
