--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.3.3
 
+#dependency_overrides:
+#  module_base:
+#    path: /Users/moyearzhou/StudioProjects/module_base
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
