--story=1000279@tapd-63782301 --user=moyearzhou 【客户端】基本代码优化 https://www.tapd.cn/63782301/s/1000606

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -34,7 +34,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-#  assets:
+  assets:
+    - dev.env  # 仅 Debug 模式需要
+    - production.env # 生产环境配置
 #    - assets/
 #    - assets/items/
   # The following line ensures that the Material Icons font is
