--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
 #    path: /Users/moyearzhou/StudioProjects/module_base
     git:
       url: https://github.com/moyearzhou/ModuleBase.git
-      ref: feat/ohos
+      ref: v-0.1.1
   
   # HTML渲染支持，用于显示笔记的富文本内容
   flutter_html: ^3.0.0-beta.2
